v1_羅婉薰(修改後的)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="羅婉薰">s1132249</string>
+    <string name="app_name">羅婉薰</string>
+    <string name="title_activity_main">MainActivity</string>
 </resources>
